adding Javascript in page

--- a/index.html
+++ b/index.html
@@ -131,62 +131,8 @@
               similique praesentium numquam! Obcaecati, blanditiis repellat.
             </p>
           </div>
-          <div class="Skills-language">
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>html & css</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>javascript</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>React js</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>ux & ui</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>mern stack</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
+          <div class="Skills-language" id="Skills-Data">
+            <!-- Data -->
           </div>
         </div>
       </section>
@@ -205,67 +151,8 @@
               similique praesentium numquam! Obcaecati, blanditiis repellat.
             </p>
           </div>
-          <div class="Project-language">
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
+          <div class="Project-language" id="ProjectData">
+            <!-- Data -->
           </div>
         </div>
       </section>
@@ -283,67 +170,8 @@
               similique praesentium numquam! Obcaecati, blanditiis repellat.
             </p>
           </div>
-          <div class="Blog-language">
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
-            <div class="box-language">
-              <img src="image/icons8-github.svg" alt="" class="image-project" />
-              <div class="box-text-tech">
-                <h5>Project</h5>
-                <img src="image/Avatar-shailesh.jpg" alt="" />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Suscipit et dolores non quibusdam sed optio error, pariatur
-                  explicabo earum iste?
-                </p>
-              </div>
-            </div>
+          <div class="Blog-language" id="Blogs">
+           
           </div>
         </div>
       </section>
@@ -387,6 +215,10 @@
       </p>
     </footer>
 
-    <script type="module" src="index.js"></script>
+    <script src="Javascript/Index.js"></script>
+    <script src="Javascript/Working-Data.js"></script>
+    <script src="Javascript/Skills-Data.js"></script>
+    <script src="Javascript/Project.js"></script>
+    <script src="Javascript/Blogs.js"></script>
   </body>
 </html>
