adding dataBase to database js file and sending data to html form

--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
                   error expedita reprehenderit molestiae?
                 </p>
                 <div class="button-CV">
-                  <button>Download CV</button>
+                  <a
+                    href="Resume/shailesh kale Resume (December 2023) (1).pdf"
+                    download="shailesh kale Resume.pdf">
+                    <button>Download CV</button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -95,6 +99,11 @@
                 /></a>
                 <a href="https://twitter.com/Shaileshkale123" target="_blank"
                   ><img src="image/icons8-twitter.svg" alt="X" class="icon"
+                /></a>
+                <a
+                  href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=shaileshkale87730@gmail.com"
+                  target="_blank"
+                  ><img src="image/mail.png" alt="mailBox" class="icon"
                 /></a>
               </div>
             </div>
@@ -170,9 +179,7 @@
               similique praesentium numquam! Obcaecati, blanditiis repellat.
             </p>
           </div>
-          <div class="Blog-language" id="Blogs">
-           
-          </div>
+          <div class="Blog-language" id="Blogs"></div>
         </div>
       </section>
       <section id="Contact">
@@ -185,11 +192,11 @@
             <div class="form-container">
               <div class="FormInput">
                 <label for="Username"> User Name</label>
-                <input type="text" name="Username" id="UsernameS" />
+                <input type="text" name="name" id="username" />
               </div>
               <div class="FormInput">
                 <label for="email">User Email</label>
-                <input type="email" name="email" id="emailS" />
+                <input type="email" name="email" id="email" />
               </div>
               <div class="FormInput">
                 <label for="number">User Number</label>
@@ -214,11 +221,14 @@
         All Copyright Reserved By &#169; shailesh kale <span id="Data"></span>
       </p>
     </footer>
-
+   
     <script src="Javascript/Index.js"></script>
     <script src="Javascript/Working-Data.js"></script>
     <script src="Javascript/Skills-Data.js"></script>
     <script src="Javascript/Project.js"></script>
     <script src="Javascript/Blogs.js"></script>
+<script src="Javascript/data-base.js"></script>
+
+   
   </body>
 </html>
