adding text to ui

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container-Home">
           <div class="heading-container">
             <h1>
-              HELLO I AM SHAILESH KALE <span class="title-name"> WEB DEVELOPER </span> TO THANK YOU FOR <span class="title-name"> CONNENTING  ME</span>
+              HELLO I AM SHAILESH KALE <span class="title-name"> WEB DEVELOPER </span>  THANK YOU FOR <span class="title-name"> CONNENTING  ME</span>
             </h1>
           </div>
           <div class="profile-container">
@@ -69,9 +69,7 @@
               <div class="Profile-myBio">
                 <h1>Shailesh Kale</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Aliquam ducimus voluptatem odio quas veritatis, cum nihil
-                  error expedita reprehenderit molestiae?
+                  As a Software Engineer I am working on the JavaScript and JavaScript based technology to develop the website in more efficiently.
                 </p>
                 <div class="button-CV">
                   <a
@@ -112,9 +110,7 @@
             <div class="i_do_container">
               <h1>What i do....</h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-                impedit atque accusantium reiciendis illo. Iusto ullam rem
-                repellat sint labore.
+                As a web developer handling both frontend and backend, you craft the user-facing interface (frontend) while managing the server-side logic (backend), ensuring seamless and efficient functionality for web applications.
               </p>
             </div>
             <div class="working_tech">
@@ -131,12 +127,7 @@
           <div class="Skills-container-text">
             <h1>Most using language</h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Molestiae eum corporis error nobis nulla voluptas voluptatum eius
-              ad architecto, at tenetur aperiam magni? Minima assumenda, quis
-              libero repellat corporis ipsa consequuntur maiores quae vitae
-              corrupti est qui, quam nisi architecto aperiam alias hic quas
-              similique praesentium numquam! Obcaecati, blanditiis repellat.
+              As a web developer proficient in HTML, CSS, JavaScript, GitHub, and Node.js, you possess a strong foundation in front-end development, version control, and server-side JavaScript, enabling robust and dynamic web application creation.
             </p>
           </div>
           <div class="Skills-language" id="Skills-Data">
@@ -151,12 +142,7 @@
           <div class="Project-container-text">
             <h1>Most using Project</h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Molestiae eum corporis error nobis nulla voluptas voluptatum eius
-              ad architecto, at tenetur aperiam magni? Minima assumenda, quis
-              libero repellat corporis ipsa consequuntur maiores quae vitae
-              corrupti est qui, quam nisi architecto aperiam alias hic quas
-              similique praesentium numquam! Obcaecati, blanditiis repellat.
+              Creating a user-friendly and responsive e-commerce platform specializing in handmade crafts, utilizing modern web technologies and emphasizing a seamless user experience.
             </p>
           </div>
           <div class="Project-language" id="ProjectData">
@@ -168,14 +154,9 @@
         <h1 class="title-h1">My Blog</h1>
         <div class="Blog-container">
           <div class="Blog-container-text">
-            <h1>Most using Project</h1>
+            <h1>Most using Blog</h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Molestiae eum corporis error nobis nulla voluptas voluptatum eius
-              ad architecto, at tenetur aperiam magni? Minima assumenda, quis
-              libero repellat corporis ipsa consequuntur maiores quae vitae
-              corrupti est qui, quam nisi architecto aperiam alias hic quas
-              similique praesentium numquam! Obcaecati, blanditiis repellat.
+              Empowering aspiring web developers with cutting-edge insights, tutorials, and trends to navigate the ever-evolving landscape of web development.
             </p>
           </div>
           <div class="Blog-language" id="Blogs"></div>
@@ -186,7 +167,7 @@
         <div class="Contact-container">
           <div class="Contact-container-text">
             <h1>Contact Me To fill the Form ☺</h1>
-            <span id="error"></span>
+            <!-- <span id="error"></span> -->
           </div>
           <form action="" method="post">
             <div class="form-container">
