adding media screen add new features

--- a/index.html
+++ b/index.html
@@ -8,8 +8,34 @@
   </head>
   <body>
     <header>
-      <div class="image-Log">
-        <!-- <img src="" alt=""> -->
+      <div class="image-navber">
+        <div class="image-Log-2">
+          <!-- <img src="" alt=""> -->
+          <a href="#Home"
+            ><p>
+              <img
+                src="image/icons8-connect-develop.svg"
+                alt=""
+                class="icon" />Shailesh
+            </p></a
+          >
+        </div>
+        <div class="image-menu">
+          <!-- <img src="" alt=""> -->
+          <a href="#Home" 
+            ><p>
+              <img
+                src="image/icons8-menu.svg"
+                alt=""
+                class="icon hamburger"  />
+            </p></a
+          >
+        </div>
+      </div>
+      <div class="header-pos">
+
+        <div class="image-Log">
+          <!-- <img src="" alt=""> -->
         <a href="#Home"
           ><p>
             <img
@@ -24,7 +50,7 @@
         <ul>
           <li>
             <a href="#Home"
-              ><img src="image/icons8-home.svg" alt="" class="icon" /> Home</a
+            ><img src="image/icons8-home.svg" alt="" class="icon" /> Home</a
             >
           </li>
           <li>
@@ -36,7 +62,7 @@
             <a href="#Project"
               ><img src="image/icons8-project-80.png" alt="" class="icon" />
               Project</a
-            >
+              >
           </li>
           <li>
             <a href="#Blog"
@@ -45,15 +71,18 @@
           </li>
           <li>
             <a href="#Contact"
-              ><img src="image/download (3).png" alt="" class="icon" />
+            ><img src="image/download (3).png" alt="" class="icon" />
               Contact</a
             >
           </li>
+          <img src="image/icons8-x-48.png" alt="" class="icon closes">
         </ul>
       </nav>
+    </div>
     </header>
     <main>
       <section id="Home">
+        
         <div class="container-Home">
           <div class="heading-container">
             <h1>
@@ -204,7 +233,7 @@
               </div>
               <div class="FormInput">
                 <label for="number">User Number</label>
-                <input type="number" name="number" id="number" />
+                <input type="number" name="number" id="number"/>
               </div>
               <div class="FormInput">
                 <label for="message">User message</label>
