adding Inadex.js

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </p>
     </footer>
 
-    <script src="Javascript/Index.js"></script>
+    <script src="Javascript/index.js"></script>
     <script src="Javascript/Working-Data.js"></script>
     <script src="Javascript/Skills-Data.js"></script>
     <script src="Javascript/Project.js"></script>
