--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Portofilo, Shailesh, react developer, job Profile">
+    <link rel="icon" type="image/x-icon" href="image/icons8-connect-develop.svg">
     <title>Shailesh - Portofilo</title>
     <link rel="stylesheet" href="Style.css" />
   </head>
